--- a/halimpl/pn54x/libnfc-nxp-PN547C2_example.conf
+++ b/halimpl/pn54x/libnfc-nxp-PN547C2_example.conf
@@ -1,6 +1,5 @@
 ## This file is used by NFC NXP NCI HAL(external/libnfc-nci/halimpl/pn547)
 ## and NFC Service Java Native Interface Extensions (packages/apps/Nfc/nci/jni/extns/pn547)
-
 ###############################################################################
 # Application options 
 # Logging Levels
@@ -9,7 +8,6 @@
 # ANDROID_LOG_WARN           0x02 
 # ANDROID_LOG_ERROR          0x01 
 # ANDROID_LOG_SILENT         0x00
-#
 NXPLOG_EXTNS_LOGLEVEL=0x03
 NXPLOG_NCIHAL_LOGLEVEL=0x03
 NXPLOG_NCIX_LOGLEVEL=0x03
@@ -28,6 +26,7 @@ MIFARE_READER_ENABLE=0x01
 ###############################################################################
 # Vzw Feature enable
 VZW_FEATURE_ENABLE=0x01
+
 ###############################################################################
 # File name for Firmware
 NXP_FW_NAME="libpn547_fw.so"
@@ -36,7 +35,6 @@ NXP_FW_NAME="libpn547_fw.so"
 # System clock source selection configuration
 #define CLK_SRC_XTAL       1
 #define CLK_SRC_PLL        2
-
 NXP_SYS_CLK_SRC_SEL=0x01
 
 ###############################################################################
@@ -47,13 +45,11 @@ NXP_SYS_CLK_SRC_SEL=0x01
 #define CLK_FREQ_26MHZ         4
 #define CLK_FREQ_38_4MHZ       5
 #define CLK_FREQ_52MHZ         6
-
 NXP_SYS_CLK_FREQ_SEL=0x00
 
 ###############################################################################
 # The timeout value to be used for clock request acknowledgment 
 # min value = 0x01 to max = 0x06
-
 NXP_SYS_CLOCK_TO_CFG=0x01
 
 ###############################################################################
@@ -74,41 +70,6 @@ NXP_NFC_PROFILE_EXTN={20, 02, 05, 01, A0, 44, 01, 00}
 #Disable 0x00
 NXP_CORE_SCRN_OFF_AUTONOMOUS_ENABLE=0x00
 
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-# NXP_RF_CONF_BLK_1={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_2={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_3={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_4={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_5={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_6={
-#}
 
 ###############################################################################
 ## Set configuration optimization decision setting
@@ -117,53 +78,14 @@ NXP_CORE_SCRN_OFF_AUTONOMOUS_ENABLE=0x00
 NXP_SET_CONFIG_ALWAYS=0x01
 
 ###############################################################################
-# Core configuration extensions
-# It includes
-# Wired mode settings A0ED, A0EE
-# Tag Detector A040, A041, A043
-# Low Power mode A007
-# Clock settings A002, A003
-# PbF settings A008
-NXP_CORE_CONF_EXTN={20, 02, 16, 04,
-    A0, EC, 01, 01,  
-    A0, ED, 01, 01,
-    A0, 5E, 01, 01,
-    A0, 0D, 06, 3E, 2D, 15, 88, 15, 00
-    }
-#       A0, 40, 01, 01, 
-#       A0, 41, 01, 02, 
-#       A0, 43, 01, 04,
-#       A0, 02, 01, 01, 
-#       A0, 03, 01, 11,
-#       A0, 07, 01, 03,
-#       A0, 08, 01, 01
-#       }
-
-###############################################################################
 # Core configuration rf field filter settings to enable set to 01 to disable set to 00 last bit
 NXP_CORE_RF_FIELD={ 20, 02, 05, 01, A0, 62, 01, 01
         }
+
 ###############################################################################
 # To enable i2c fragmentation set i2c fragmentation enable 0x01 to disable set to 0x00
 NXP_I2C_FRAGMENTATION_ENABLED=0x00
-###############################################################################
-# Core configuration settings 
-NXP_CORE_CONF={ 20, 02, 2B, 0D,
-        28, 01, 00,
-        21, 01, 00,
-        30, 01, 08,
-        31, 01, 03,
-        33, 04, 01, 02, 03, 04,
-        54, 01, 06,
-        50, 01, 02,
-        5B, 01, 00,
-        60, 01, 0E,
-        80, 01, 01,
-        81, 01, 01,
-        82, 01, 0E,
-        18, 01, 01 
-        }
- 
+
 ###############################################################################
 # Mifare Classic Key settings 
 #NXP_CORE_MFCKEY_SETTING={20, 02, 25,04, A0, 51, 06, A0, A1, A2, A3, A4, A5, 
@@ -176,10 +98,11 @@ NXP_CORE_CONF={ 20, 02, 2B, 0D,
 # No secure element 0x00
 # eSE               0x01
 # UICC              0x02
- 
 NXP_DEFAULT_SE=0x02
 
-NXP_DEFAULT_NFCEE_TIMEOUT=0x06
+###############################################################################
+NXP_DEFAULT_NFCEE_TIMEOUT=20
+
 ###############################################################################
 #Enable SWP full power mode when phone is power off
 NXP_SWP_FULL_PWR_ON=0x01
@@ -214,33 +137,36 @@ DEFAULT_MIFARE_CLT_ROUTE=0x02
 #PN65T              0x02
 #PN548AD            0x03
 #PN66T              0x04
-
 NXP_NFC_CHIP=0x01
 
+###############################################################################
 #Timeout in secs
 NXP_SWP_RD_START_TIMEOUT=0x0A
+
+###############################################################################
 #Timeout in secs
 NXP_SWP_RD_TAG_OP_TIMEOUT=0x01
+
 ###############################################################################
 # CE when Screen state is locked
+# This setting is for DEFAULT_AID_ROUTE,
+# DEFAULT_DESFIRE_ROUTE and DEFAULT_MIFARE_CLT_ROUTE
 # Disable           0x00
 # Enable            0x01
 NXP_CE_ROUTE_STRICT_DISABLE=0x01
 
-
 ###############################################################################
-
 # AID Matching platform options
 # AID_MATCHING_L 0x01
 # AID_MATCHING_K 0x02
 AID_MATCHING_PLATFORM=0x01
+
 ################################################################################
 #Used to Restrict Type A UICC baud rate
 #0 = default supported
 #1 = 212 maximum supported
 #2 = 424 maximum supported
 #3 = 848 maximum supported
-
 NXP_TYPEA_UICC_BAUD_RATE=0x00
 
 ################################################################################
@@ -249,13 +175,13 @@ NXP_TYPEA_UICC_BAUD_RATE=0x00
 #1 = 212 maximum supported
 #2 = 424 maximum supported
 #3 = 848 maximum supported
-
 NXP_TYPEB_UICC_BAUD_RATE=0x00
-################################################################################
 
+################################################################################
 #Config to allow adding aids
 #NFC on/off is required after this config
 #1 = enabling adding aid  to NFCC routing table.
 #0 = disabling adding aid to NFCC routing table.
 NXP_ENABLE_ADD_AID=0x01
-##################################################################################
+
+################################################################################
