--- a/halimpl/pn54x/libnfc-nxp-PN80T_example.conf
+++ b/halimpl/pn54x/libnfc-nxp-PN80T_example.conf
@@ -1,6 +1,5 @@
 ## This file is used by NFC NXP NCI HAL(external/libnfc-nci/halimpl/pn547)
 ## and NFC Service Java Native Interface Extensions (packages/apps/Nfc/nci/jni/extns/pn547)
-
 ###############################################################################
 # Application options
 # Logging Levels
@@ -9,7 +8,6 @@
 # ANDROID_LOG_WARN           0x02
 # ANDROID_LOG_ERROR          0x01
 # ANDROID_LOG_SILENT         0x00
-#
 NXPLOG_EXTNS_LOGLEVEL=0x03
 NXPLOG_NCIHAL_LOGLEVEL=0x03
 NXPLOG_NCIX_LOGLEVEL=0x03
@@ -37,8 +35,7 @@ NXP_FW_NAME="libpn553_fw.so"
 # System clock source selection configuration
 #define CLK_SRC_XTAL       1
 #define CLK_SRC_PLL        2
-
-NXP_SYS_CLK_SRC_SEL=0x01
+NXP_SYS_CLK_SRC_SEL=0x02
 
 ###############################################################################
 # System clock frequency selection configuration
@@ -48,13 +45,11 @@ NXP_SYS_CLK_SRC_SEL=0x01
 #define CLK_FREQ_26MHZ         4
 #define CLK_FREQ_38_4MHZ       5
 #define CLK_FREQ_52MHZ         6
-
-NXP_SYS_CLK_FREQ_SEL=0x01
+NXP_SYS_CLK_FREQ_SEL=0x02
 
 ###############################################################################
 # The timeout value to be used for clock request acknowledgment
 # min value = 0x01 to max = 0x06
-
 NXP_SYS_CLOCK_TO_CFG=0x06
 
 ###############################################################################
@@ -75,62 +70,20 @@ NXP_NFC_MERGE_RF_PARAMS={20, 02, 04, 01, 85, 01, 01}
 # Standby enable settings
 #NXP_CORE_STANDBY={2F, 00, 01, 01}
 
-
 ###############################################################################
 # NXP TVDD configurations settings
-# Allow NFCC to configure External TVDD, There are currently three
-#configurations (1, 2 and 3) are supported, out of them only one can be
-#supported.
-
+# Allow NFCC to configure External TVDD, two configurations (1 and 2) supported,
+# out of them only one can be configured at a time.
 NXP_EXT_TVDD_CFG=0x02
 
+###############################################################################
 #config1:SLALM, 3.3V for both RM and CM
 NXP_EXT_TVDD_CFG_1={20, 02, 0F, 01, A0, 0E, 0B, 31, 01, 01, 31, 00, 00, 00, 01, 00, D0, 0C}
 
+###############################################################################
 #config2: use DCDC in CE, use Tx_Pwr_Req, set CFG2 mode, SLALM,
 #monitoring 5V from DCDC, 3.3V for both RM and CM, DCDCWaitTime=4.2ms
 NXP_EXT_TVDD_CFG_2={20, 02, 0F, 01, A0, 0E, 0B, 11, 01, C2, B2, 00, B2, 1E, 1F, 00, D0, 0C}
-
-#config3: use DCDC in CE, use Tx_Pwr_Req, SLALM, monitoring 5V from DCDC,
-#DCDCWaitTime=4.2ms
-NXP_EXT_TVDD_CFG_3={20, 02, 0B, 02, A0, 66, 01, 01, A0, 0E, 03, 52, 40, 0A}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_1={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_2={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_3={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_4={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_5={
-#}
-
-###############################################################################
-# NXP RF configuration ALM/PLM settings
-# This section needs to be updated with the correct values based on the platform
-#NXP_RF_CONF_BLK_6={
-#}
-
 
 ###############################################################################
 # Set configuration optimization decision setting
@@ -139,61 +92,14 @@ NXP_EXT_TVDD_CFG_3={20, 02, 0B, 02, A0, 66, 01, 01, A0, 0E, 03, 52, 40, 0A}
 NXP_SET_CONFIG_ALWAYS=0x00
 
 ###############################################################################
-# Core configuration extensions
-# It includes
-# Wired mode settings A0ED, A0EE
-# Tag Detector A040, A041, A043
-# Low Power mode A007
-# Clock settings A002, A003
-# PbF settings A008
-# Clock timeout settings A004
-NXP_CORE_CONF_EXTN={20, 02, 25, 09,
-    A0, EC, 01, 01,
-    A0, ED, 01, 01,
-    A0, 5E, 01, 01,
-    A0, 12, 01, 02,
-    A0, 40, 01, 01,
-    A0, DD, 01, 2D,
-    A0, D1, 01, 02,
-    A0, D4, 01, 01,
-    A0, 37, 01, 11
-   }
-#       A0, F2, 01, 01,
-#       A0, 40, 01, 01,
-#       A0, 41, 01, 02,
-#       A0, 43, 01, 04,
-#       A0, 02, 01, 01,
-#       A0, 03, 01, 11,
-#       A0, 07, 01, 03,
-#       A0, 08, 01, 01
-#       }
+# Core configuration rf field filter settings to enable set to 01 to disable set
+# to 00 last bit
+NXP_CORE_RF_FIELD={ 20, 02, 05, 01, A0, 62, 01, 00 }
 
 ###############################################################################
-# Core configuration rf field filter settings to enable set to 01 to disable set to 00 last bit
-NXP_CORE_RF_FIELD={ 20, 02, 05, 01, A0, 62, 01, 01
-        }
-###############################################################################
-# To enable i2c fragmentation set i2c fragmentation enable 0x01 to disable set to 0x00
+# To enable i2c fragmentation set i2c fragmentation enable 0x01 to disable set
+# to 0x00
 NXP_I2C_FRAGMENTATION_ENABLED=0x00
-
-###############################################################################
-# Core configuration settings
-NXP_CORE_CONF={ 20, 02, 2E, 0E,
-        28, 01, 00,
-        21, 01, 00,
-        30, 01, 08,
-        31, 01, 03,
-        32, 01, 60,
-        38, 01, 01,
-        33, 04, 01, 02, 03, 04,
-        54, 01, 06,
-        50, 01, 02,
-        5B, 01, 00,
-        80, 01, 01,
-        81, 01, 01,
-        82, 01, 0E,
-        18, 01, 01
-        }
 
 ###############################################################################
 # Mifare Classic Key settings
@@ -209,6 +115,12 @@ NXP_CORE_CONF={ 20, 02, 2E, 0E,
 # UICC              0x02
 # UICC2             0x04
 NXP_DEFAULT_SE=0x07
+
+###############################################################################
+#set autonomous mode
+# disable autonomous 0x00
+# enable autonomous  0x01
+NXP_CORE_SCRN_OFF_AUTONOMOUS_ENABLE=0x00
 
 ###############################################################################
 #Enable SWP full power mode when phone is power off
@@ -228,55 +140,60 @@ NXP_NFC_CHIP=0x08
 
 ###############################################################################
 # CE when Screen state is locked
+# This setting is for DEFAULT_AID_ROUTE,
+# DEFAULT_DESFIRE_ROUTE and DEFAULT_MIFARE_CLT_ROUTE
 # Disable           0x00
 # Enable            0x01
 NXP_CE_ROUTE_STRICT_DISABLE=0x01
 
+###############################################################################
 #Timeout in secs to get NFCEE Discover notification
 NXP_DEFAULT_NFCEE_DISC_TIMEOUT=20
 
-NXP_DEFAULT_NFCEE_TIMEOUT=0x06
+###############################################################################
+NXP_DEFAULT_NFCEE_TIMEOUT=20
 
+###############################################################################
 #Timeout in secs
 NXP_SWP_RD_START_TIMEOUT=0x0A
 
+###############################################################################
 #Timeout in secs
 NXP_SWP_RD_TAG_OP_TIMEOUT=0x01
 
 ###############################################################################
-
 #Set the default AID route Location :
 #This settings will be used when application does not set this parameter
-# host 0x00
-# eSE  0x01
-# UICC 0x02
-# UICC2 0x04
+# host  0x00
+# eSE   0x01
+# UICC  0x02
+# UICC2 0x03
 DEFAULT_AID_ROUTE=0x00
 
 ###############################################################################
 #Set the Mifare Desfire route Location :
 #This settings will be used when application does not set this parameter
-# host 0x00
-# eSE  0x01
-# UICC 0x02
-#UICC2 0x04
+# host  0x00
+# eSE   0x01
+# UICC  0x02
+# UICC2 0x03
 DEFAULT_DESFIRE_ROUTE=0x02
 
 ###############################################################################
 #Set the Mifare CLT route Location :
 #This settings will be used when application does not set this parameter
-# host 0x00
-# eSE  0x01
-# UICC 0x02
-#UICC2 0x04
+# host  0x00
+# eSE   0x01
+# UICC  0x02
+# UICC2 0x03
 DEFAULT_MIFARE_CLT_ROUTE=0x02
 
 ###############################################################################
 #Set the Felica CLT route Location :
 #This settings will be used when application does not set this parameter
-# eSE  0x01
-# UICC 0x02
-# UICC2 0x04
+# eSE   0x01
+# UICC  0x02
+# UICC2 0x03
 DEFAULT_FELICA_CLT_ROUTE=0x01
 
 ###############################################################################
@@ -324,21 +241,25 @@ DEFAULT_FELICA_CLT_PWR_STATE=0x1B
 # AID_MATCHING_L 0x01
 # AID_MATCHING_K 0x02
 AID_MATCHING_PLATFORM=0x01
+
 ###############################################################################
 # P61 interface options
 # NFC 0x01
 # SPI 0x02
 NXP_P61_LS_DEFAULT_INTERFACE=0x01
+
 ###############################################################################
 # P61 LTSM interface options
 # NFC 0x01
 # SPI 0x02
 NXP_P61_LTSM_DEFAULT_INTERFACE=0x01
+
 ###############################################################################
 #CHINA_TIANJIN_RF_SETTING
 #Enable  0x01
 #Disable  0x00
 NXP_CHINA_TIANJIN_RF_ENABLED=0x01
+
 ###############################################################################
 #SWP_SWITCH_TIMEOUT_SETTING
 # Allowed range of swp timeout setting is 0x00 to 0x3C [0 - 60].
@@ -346,11 +267,13 @@ NXP_CHINA_TIANJIN_RF_ENABLED=0x01
 # No Timeout  0x00
 # 10 millisecond timeout 0x0A
 NXP_SWP_SWITCH_TIMEOUT=0x0A
+
 ###############################################################################
 # P61 interface options for JCOP Download
 # NFC 0x01
 # SPI 0x02
 NXP_P61_JCOP_DEFAULT_INTERFACE=0x01
+
 ###############################################################################
 # P61 JCOP OS download  options
 # FRAMEWORK API BY APPLICATION 0x00
@@ -365,8 +288,10 @@ NXP_JCOPDL_AT_BOOT_ENABLE=0x00
 # LS2.2 0x22
 # AT NFC service intialization
 NXP_LOADER_SERVICE_VERSION=0x22
+
 ###############################################################################
-#Timeout value  in milliseconds for NFCC standby mode.The range is between 5000 msec to 20000 msec and zero is to disable.
+#Timeout value  in milliseconds for NFCC standby mode.The range is between 5000
+#msec to 20000 msec and zero is to disable.
 NXP_NFCC_STANDBY_TIMEOUT=20000
 
 ###############################################################################
@@ -374,6 +299,7 @@ NXP_NFCC_STANDBY_TIMEOUT=20000
 # Disable           0x00
 # Enable            0x01
 NXP_AGC_DEBUG_ENABLE=0x00
+
 ###############################################################################
 #Virtual Mode ESE and Wired Mode ongoing delay Wired Mode
 # For Technology routing to ESE Technology Mask = 4
@@ -387,7 +313,8 @@ NXP_ESE_WIRED_PRT_MASK=0x00
 #For Technology routing to UICC Technology Mask = 4
 #For ISO-DEP Protocol routing to UICC set Mask  = 2
 #For Select AID Routing to UICC       set Mask  = 1
-#It can also take values TECH|PROTO|SELECT_AID  = 7 , 6 , 5 ,3 .To ignore delay  set mask = 0
+#It can also take values TECH|PROTO|SELECT_AID  = 7 , 6 , 5 ,3 .To ignore delay
+#set mask = 0
 NXP_UICC_WIRED_PRT_MASK=0x00
 
 ################################################################################
@@ -397,53 +324,57 @@ NXP_UICC_WIRED_PRT_MASK=0x00
 NXP_WIRED_MODE_RF_FIELD_ENABLE=0x00
 
 ###############################################################################
-# UICC mode supported
-# Disable           0x00
-# Enable            0x01
-NXP_DUAL_UICC_ENABLE=0x00
-###############################################################################
 #Config to allow adding aids
 #NFC on/off is required after this config
 #1 = enabling adding aid  to NFCC routing table.
 #0 = disabling adding aid to NFCC routing table.
 NXP_ENABLE_ADD_AID=0x01
+
 ###############################################################################
-# JCOP-3.3 continuous process timeout in msec and value should be in Hexadecimal.
+# JCOP-3.3 continuous process timeout in msec and value should be in Hexadecimal
 # JCOP CP TIMEOUT
 NXP_CP_TIMEOUT={00, 77}
+
 ###############################################################################
 # Enable/Disable checking default proto SE Id
 # Disable           0x00
 # Enable            0x01
 NXP_CHECK_DEFAULT_PROTO_SE_ID=0x01
+
+###############################################################################
+# SVDD sync off Delay in ms it can be max 20 ms
+# If out of range timeout used, default delay of 10ms will be set
+NXP_SVDD_SYNC_OFF_DELAY=10
+
 ###############################################################################
 #NXP_CN_TRANSIT_BLK_NUM_CHECK_ENABLE
 #Enable/Disable block number checks for china transit use case
 #Enable  0x01
 #Disable  0x00
 NXP_CN_TRANSIT_BLK_NUM_CHECK_ENABLE=0x01
+
 ###############################################################################
 # Wired mode resume timeout vaule in wired mode resume feature enable
-NXP_WIREDMODE_RESUME_TIMEOUT = 0x02
+# DWP resume time out in ms( 4 bytes hex value and LSB first)
+#example 1000 = 0x03E8
+#exmaple 2000 = 0x07D0
+#example 500 = 0x01F4
+NXP_WIREDMODE_RESUME_TIMEOUT={E8,03,00,00}
 ###############################################################################
 # Power to eSE is controlled by DH or PMU depending on following configurations
 #define DH_PWR_CONTROL         1
 #define PMU_PWR_CONTROL        2
-
 NXP_ESE_POWER_DH_CONTROL=1
+
+###############################################################################
+# Timeout value in milliseconds for wired mode resume after RF field event timeout
+NXP_NFCC_RF_FIELD_EVENT_TIMEOUT=3000
 
 ###############################################################################
 # NXP PMU Support configuration is sent if PMU_PWR_CONTROL is configured
 # External PMU available in phone ON and phone OFF case if NXP_ESE_POWER_EXT_PMU=1
 # External PMU available only in phone ON case if NXP_ESE_POWER_EXT_PMU=2
-
 NXP_ESE_POWER_EXT_PMU=2
-
-###############################################################################
-# Enable/Disable mifare desfire CE prio feature
-# Disable           0x00
-# Enable            0x01
-NXP_MIFARE_DESFIRE_DISABLE=0x00
 
 ###############################################################################
 # Whether to allow wired mode in desfire and mifare CLT
@@ -456,3 +387,19 @@ NXP_ALLOW_WIRED_IN_MIFARE_DESFIRE_CLT=0x00
 # Blacklist enable   0x01
 # Blacklist disable  0x00
 NXP_PROP_BLACKLIST_ROUTING=0x00
+
+###############################################################################
+# Send DWP interface reset command as part of SE open
+# Disable           0x00
+# Enable            0x01
+NXP_DWP_INTF_RESET_ENABLE=0x01
+
+###############################################################################
+# Timeout value in milliseconds for JCOP OS download to complete
+OS_DOWNLOAD_TIMEOUT_VALUE=60000
+
+###############################################################################
+# Timeout value in milliseconds to send response for Felica command received
+NXP_HCEF_CMD_RSP_TIMEOUT_VALUE=5000
+
+###############################################################################
